# Lola

./: LICENSE  README.md  components.d.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts  my.d.ts  router.ts
src-tauri/: Cargo.toml  build.rs  next_data.json  opgg.html  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  app_status.rs  custom_provider.rs  ddragon.rs  for_render.rs  lcu_driver.rs  main.rs  source_provider.rs  tray.rs  util.rs  ws.rs
src-tauri/src/source_provider/: cache_manager.rs  opgg.rs
src/components/: AmumuLoading.vue  AppBar.vue  ChampionBuild.vue  Dashboard.vue  Home.vue  MatchHistory.vue  MenuPage.vue  MiniUI.vue
src/components/ChampionBuild/: BuildManager.ts  Runes.vue  Spells.vue
src/components/MatchHistory/: Detail.vue  History.vue
src/components/models/Backend/: AppConfig.ts  SelectChampion.ts
src/components/models/LOL/: ChampionInfo.ts  LcuEvents.ts  LolRuneItem.ts  Matches.ts  Materies.ts  SummonerInfo.ts  gameMode.ts
src/components/utils/: appConfig.ts  global.ts  lcu.ts
